infrastructure/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netsentinel-backend
spec:
  replicas: 6
  selector:
    matchLabels:
      app: netsentinel-backend
  template:
    metadata:
      labels:
        app: netsentinel-backend
    spec:
      containers:
        - name: backend
          image: dockeramnexus/netsentinel-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: netsentinel-backend
  annotations:
    metallb.universe.tf/allow-shared-ip: "netsentinel-shared"
spec:
  selector:
    app: netsentinel-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
