infrastructure/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netsentinel-frontend
spec:
  replicas: 6
  selector:
    matchLabels:
      app: netsentinel-frontend
  template:
    metadata:
      labels:
        app: netsentinel-frontend
    spec:
      containers:
        - name: frontend
          image: dockeramnexus/netsentinel-frontend:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: netsentinel-frontend
  annotations:
    metallb.universe.tf/allow-shared-ip: "netsentinel-shared"
spec:
  selector:
    app: netsentinel-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
