infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netsentinel-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: 23.176.128.39.nip.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: netsentinel-backend
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netsentinel-frontend
            port:
              number: 80
